getting response status and body info